# quetzalcoatlus

./: CMakeLists.txt  hello_embree.cpp  readme.md
examples/: CMakeLists.txt  cornell_box.cpp  glass_spheres.cpp  mandelbrot.cpp  obj_viewer.cpp  opposing_planes.cpp  teapot.cpp  test.cpp  textures.cpp
src/: CMakeLists.txt  bounds.hpp  bxdf.cpp  bxdf.hpp  camera.cpp  camera.hpp  image.cpp  image.hpp  interaction.hpp  interval.hpp  light.cpp  light.hpp  main  main.cpp  material.cpp  material.hpp  onb.hpp  primitive.hpp  random.cpp  random.hpp  ray.hpp  regex.hpp  render.cpp  render.hpp  render_result.cpp  render_result.hpp  sampler.cpp  sampler.hpp  scene.cpp  scene.hpp  shape.cpp  shape.hpp  texture.cpp  texture.hpp  transform.cpp  transform.hpp  util.cpp  util.hpp  vec.cpp  vec.hpp
src/color/: CMakeLists.txt  color.hpp  color_test.cpp  rgb.cpp  rgb.hpp  rgb_to_spectrum_opt.cpp  rgb_to_spectrum_opt.hpp  sensor.cpp  sensor.hpp  spectra.cpp  spectra.hpp  spectrum.cpp  spectrum.hpp  spectrum_sample.cpp  spectrum_sample.hpp  xyz.cpp  xyz.hpp
src/scattering/: CMakeLists.txt  medium.cpp  medium.hpp  phase_function.cpp  phase_function.hpp
